sonarqube-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: sonarqube
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/cookie-persistence: "mycookie"
spec:
  ports:
  - name: port-sonar
    port: 9000
    protocol: TCP
    targetPort: 9000
  externalIPs:
    - 192.168.22.152
    - 192.168.22.153 

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube-db
  namespace: sonarqube
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/cookie-persistence: "mycookie"
spec:
  ports:
  - name: port-db
    port: 5433
    protocol: TCP
    targetPort: 5433
