sonarqube-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: sonarqube/kubernetes.local
spec:
  tls:
  - hosts:
      - "sonarqube.kubernetes.local"
    secretName: kubernetes.local
  rules:
  - host: sonarqube.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
